--- a/views/user/partials/header.ejs
+++ b/views/user/partials/header.ejs
@@ -11,7 +11,7 @@
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap" rel="stylesheet">
-
+    <link href="/images/favicon-32x32.png" rel="icon">
     <!-- Css Styles -->
     <link rel="stylesheet" href="/home/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="/home/css/font-awesome.min.css" type="text/css">
