editaddress added in checkout

--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -633,10 +633,11 @@ input[type="text"] {
                         //     query: {
                         //         price: orderPrice,
                         //         address: address
+                 
                         //     }
                         // });  
                          
-                         location.href='/order/payFAil';
+                         location.href='/order/payFail';
 
 
                          });
