--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -41,7 +41,12 @@
                         <label for="remember-me" class="label-agree-term"><span><span></span></span>Remember me</label>
                     </div> -->
                     <div id="error-field" class="text-danger"></div>
-                    <div class="text-center text-danger"><%= message %></div>
+                    <!-- <div class="text-center text-danger"><%= message %></div> -->
+                    <% if (message) { %>
+                        <div class="alert alert-danger" role="alert">
+                          <%= message %>
+                        </div>
+                        <% } %>
                     <div class="form-group form-button">
                         <input type="submit" name="signin" id="signin" class="form-submit" value="Log in"/>
                     </div>
