--- a/views/auth/partials/header.ejs
+++ b/views/auth/partials/header.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="fonts/material-icon/css/material-design-iconic-font.min.css">
      <link rel="stylesheet" href="/css/style.css">
+     <link href="/images/favicon-32x32.png" rel="icon">
 </head>
 
    <!--header-->
